# django-ninja-talk-code

./: pyproject.toml
django_drf_app/: asgi.py  settings.py  urls.py
django_drf_app/books/: models.py  serializers.py
django_drf_app/cards/: models.py
django_drf_app/cards/migrations/: 0001_initial.py
django_ninja_app/: api.py  urls.py  wsgi.py
django_ninja_app/books/: api.py  schemas.py
django_ninja_app/books/migrations/: 0001_initial.py
fast_api_app/: database.db  main.py  models.py  models_expanded_for_demo.py  old_pydantic_model_example.py
flask_app/: app.py
