[project]
name = "projects"
version = "0.1.0"
description = ""
authors = [
    {name = "daniel rios",email = "misterrios@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-ninja (>=1.4.3,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pdbpp = "^0.11.7"
pdir2 = "^1.1.1"
django-extensions = "^4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
